SE agrega controles de JWT y login de usuario
