# src/routes/presupuestos.routes.ts
@@ -1,18 +1,62 @@
 import { Router } from 'express';
-import { getUsers, deleteUser,updateUser,createUser, filterUserNombre,filterUserApellido,filterUserDocumento } from '../controllers/user.controller';
+import { getPresupuestos, createPresupuestos,UpdatePresupuestos,borrarPresupuestos } from '../controllers/presupuestos.controller';
+import { verifyToken } from '../middlewares/auth';
 const router = Router();
 
+/**
+ * @swagger
+ * tags:
+ *   name: Categorias
+ *   description: Operaciones sobre Categorias
+ */
+/**
+ * @swagger
+ * /api/movimientos:
+ *   get:
+ *     summary: Lista presupuestos
+ *     tags: [presupuestos]
+ *     responses:
+ *       200:
+ *         description: OK
+ */
+router.get('/presupuestos', verifyToken, getPresupuestos);
 
+/**
+ * @swagger
+ * /api/presupuestos:
+ *   post:
+ *     summary: Crear presupuestos
+ *     tags: [presupuestos]
+ *     responses:
+ *       201:
+ *         description: Presupuesto creado
+ */
+router.post('/presupuestos', verifyToken, createPresupuestos);
 
-router.post('/user', createUser);
-router.put('/user/:id', updateUser);
-router.delete('/user/:id', deleteUser);
+/**
+ * @swagger
+ * /api/presupuestos/{id}:
+ *   put:
+ *     summary: Actualizar presupuestos
+ *     tags: [presupuestos]
+ *     responses:
+ *       200:
+ *         description: Presupuestos actualizado
+ */
+router.put('/presupuestos/:id', verifyToken, UpdatePresupuestos);
 
-//consulta avanzadas
-router.get('/user/filter/nombre/:nombre', filterUserNombre);
-router.get('/user/filter/apellido/:apellido', filterUserApellido);
-router.get('/user/filter/documento/:documento', filterUserDocumento);
-
-router.get('/users', getUsers);
+/**
+ * @swagger
+ * /api/presupuestos/{id}:
+ *   delete:
+ *     summary: Borrar presupuestos
+ *     tags: [presupuestos]
+ *     responses:
+ *       200:
+ *         description: Presupuestos eliminado
+ */
+router.delete('/presupuestos/:id', verifyToken, borrarPresupuestos);
 
 export default router;
+
+
