# src/swagger.json
@@ -31,6 +31,91 @@
         }
       }
     },
+    "/api/movimientos": {
+      "get": {
+        "summary": "Lista presupuestos",
+        "tags": [
+          "presupuestos"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "summary": "Crear movimientos",
+        "tags": [
+          "movimientos"
+        ],
+        "responses": {
+          "201": {
+            "description": "Movimientos creado"
+          }
+        }
+      }
+    },
+    "/api/movimientos/{id}": {
+      "put": {
+        "summary": "Actualizar movimientos",
+        "tags": [
+          "movimientos"
+        ],
+        "responses": {
+          "200": {
+            "description": "Movimientos actualizado"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Borrar movimientos",
+        "tags": [
+          "movimientos"
+        ],
+        "responses": {
+          "200": {
+            "description": "Movimientos eliminado"
+          }
+        }
+      }
+    },
+    "/api/presupuestos": {
+      "post": {
+        "summary": "Crear presupuestos",
+        "tags": [
+          "presupuestos"
+        ],
+        "responses": {
+          "201": {
+            "description": "Presupuesto creado"
+          }
+        }
+      }
+    },
+    "/api/presupuestos/{id}": {
+      "put": {
+        "summary": "Actualizar presupuestos",
+        "tags": [
+          "presupuestos"
+        ],
+        "responses": {
+          "200": {
+            "description": "Presupuestos actualizado"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Borrar presupuestos",
+        "tags": [
+          "presupuestos"
+        ],
+        "responses": {
+          "200": {
+            "description": "Presupuestos eliminado"
+          }
+        }
+      }
+    },
     "/api/users": {
       "get": {
         "summary": "Lista usuarios",
